finished the read me

--- a/index.html
+++ b/index.html
@@ -30,71 +30,71 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    <div class="container" id="9">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">9:00</p>
-          <div class="inputText col-sm-8" id ="9"><textarea class="form-control" id="textarea"></textarea></div>
-          <button class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8" ><textarea class="form-control" id="9"></textarea></div>
+          <button class="saveBtn col-sm-2" value="9">Save</button>
       </div>
     </div>
-    <div class="container" id="10">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">10:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div>
-          <button class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="10"></textarea></div>
+          <button class="saveBtn col-sm-2" value="10">Save</button>
       </div>
     </div>
-    <div class="container" id="11">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">11:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="11"></textarea></div><button
+              class="saveBtn col-sm-2" value="11">Save</button>
       </div>
     </div>
-    <div class="container" id="12">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">12:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="12"></textarea></div><button
+              class="saveBtn col-sm-2" value="12">Save</button>
       </div>
     </div>
-    <div class="container" id="13">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">1:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="13"></textarea></div><button
+              class="saveBtn col-sm-2" value="13">Save</button>
       </div>
     </div>
-    <div class="container" id="14">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">2:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="14"></textarea></div><button
+              class="saveBtn col-sm-2" value="14">Save</button>
       </div>
     </div>
-    <div class="container" id="15">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">3:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="15"></textarea></div><button
+              class="saveBtn col-sm-2" value="15">Save</button>
       </div>
     </div>
-    <div class="container" id="16">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">4:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="16"></textarea></div><button
+              class="saveBtn col-sm-2" value="16">Save</button>
       </div>
     </div>
-    <div class="container" id="17">
+    <div class="container" >
       <div class="row h-100">
           <p class="col-sm-1 my-auto time-block">5:00</p>
-          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="textarea"></textarea></div><button
-              class="saveBtn col-sm-2">Save</button>
+          <div class="inputText col-sm-8"><textarea class="form-control" rows="3" id="17"></textarea></div><button
+              class="saveBtn col-sm-2" value="17">Save</button>
       </div>
     </div>
-    <script src=assets/script.js></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src=assets/script.js></script>
   </body>
 </html>
